--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_CRYSTALLIZE_TENANT_IDENTIFIER=voyage
-NEXT_PUBLIC_SERVICE_API_URL=https://service-api-demo.superfast.shop/api/graphql
+NEXT_PUBLIC_CRYSTALLIZE_TENANT_IDENTIFIER=bonita
+NEXT_PUBLIC_SERVICE_API_URL=https://api.crystallize.com/bonita/catalogue
